editing paths for data

--- a/multiple-gaussians.ipynb
+++ b/multiple-gaussians.ipynb
@@ -46,8 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# path = 'plots-data/wb127453_c2_2022-10-24_22.04.50/image/'\n",
-    "path = 'plots-data/wb127453_c3_2022-10-24_23.05.54/image/'\n",
+    "path = 'plots-data/downloaded_run/'\n",
     "\n",
     "data = fits.getdata(path+'image_snr.fits')"
    ]
@@ -102,7 +101,7 @@
     "plt.gca().set_xticklabels([])\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig(f'plots-data/gaussian3.pdf')\n",
+    "# plt.savefig(f'plots-data/gaussian3.pdf')\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -295,7 +294,7 @@
     "plt.gca().set_xticklabels([])\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig(f'plots-data/gaussian4.pdf')\n",
+    "# plt.savefig(f'plots-data/gaussian4.pdf')\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -580,7 +579,7 @@
     "plt.gca().set_xticklabels([])\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig(f'plots-data/gaussian4-manual.pdf')\n",
+    "# plt.savefig(f'plots-data/gaussian4-manual.pdf')\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -683,7 +682,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
